-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.90 2007-09-24 18:28:52 guru Exp $
-----------------------------------------------------------------------------------------

2007-09-24	pwessel
	* psxy.c:		Box-and-whisker symbols can now optionally be of the notched
				kind where a 5th data column holding the sample size must be present.
				Activated by appending n to the X or Y in -E.

2007-09-24	remko
	* ???math.c:		Made self-documenting.
	* ???math.func:		Removed. Info is now in ???math.c.
	* make_math.sh:		Changed accordingly.
	* *.txt:		All manpages have become *.1 (except pslib.3)
	* makefile:		All makefiles include install-man, uninstall-man
	* configure.in:		--enable-mansect= removed.
	* website/gmt_install_form.html website/install_gmt_form.pl:	Manpage section removed
	* guru/install_gmt:	---"---
	* guru/*man.sh:		Allow for manpages named *.[135]

2007-09-21	pwessel
	* {gmt,grd}math.c:	Added functions KURT, SKEW, and PQUANT plus EULER's constant
	* grdmath.c:		For -S..k, did not properly account for latitude effect on dx
	* spotter/originator.c:	Added option -Q to specify constant r/t for (x,y,z) data only
				Now lists -L option in both usage and man page
	
2007-09-19	pwessel
	* triangulate.c, pscontour.c:	Synopsis now reports name of algorithm currently
				compiled in [Shewchuk or Watson].

2007-09-19	remko
	* configure.in:		Made mansect=1 default. Make versioned libraries on Darwin.
	* src/makefile:		---"---. Actually always ended manpages in .l in stead of .$(mansect)
	* src/makegmt.macros.in:	Added VERSION as variable.

2007-09-18	pwessel
	* x2sys/x2sys_cross.c:	Skip duplicate files
	
2007-09-18	remko
	* gmt_proj.c, gmt_project.h:	Nicely reformatted all genper code and fixed
				several bug, particularly inverse projection and projection out
				of field of view.
	* gmt_init.c, gmt_plot.c:	Small changes in genper code (reformatting mostly).