@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.10 2007-09-24 00:38:01 remko Exp $
+#	$Id: Makefile,v 1.11 2007-09-25 01:50:16 remko Exp $
 #
 #	makefile for gshhs directory
 #	Does not depend on GMT src or libraries
@@ -36,7 +36,7 @@ install-man:	$(MAN1)
 uninstall-man:
 		cd $(mandir)/man1; \rm -f $(MAN1)
 
-spotless:	clean
+spotless::	clean
 
 clean:	
 		\rm -f *.o *% $(PROGS)
