@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.24 2007-09-24 00:38:02 remko Exp $
+#	$Id: Makefile,v 1.25 2007-09-25 01:50:16 remko Exp $
 #	makefile for misc directory
 #
 #-------------------------------------------------------------------------------
@@ -40,10 +40,10 @@ install-man:	$(MAN1)
 uninstall-man:
 		cd $(mandir)/man1; \rm -f $(MAN1)
 
-spotless:	clean
+spotless::	clean
 
 clean:	
-		rm -f *.o $(PROGS)
+		\rm -f *.o *% $(PROGS)
 
 #-------------------------------------------------------------------------------
 #       object file dependencies
