@@ -1,4 +1,4 @@
-#	$Id: Makefile,v 1.21 2007-09-24 01:26:51 remko Exp $
+#	$Id: Makefile,v 1.22 2007-09-25 01:50:16 remko Exp $
 #
 # makefile for segyprogs directory
 #
@@ -40,7 +40,7 @@ install-man:	$(MAN1)
 uninstall-man:
 		cd $(mandir)/man1; \rm -f $(MAN1)
 
-spotless:	clean
+spotless::	clean
 
 #-------------------------------------------------------------------------------
 #	object file dependencies
