@@ -1,6 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.90 2007-09-24 18:28:52 guru Exp $
+	$Id: ChangeLog,v 1.91 2007-09-25 01:50:16 remko Exp $
 -----------------------------------------------------------------------------------------
+
+2007-09-25	remko
+	* src/*/GNUmakefile:	Added to build manpages within each directory
+	* src/manpages.mk:	Makefile included in src/*/GNUmakefile and src/GNUmakefile
+	* makefile:		All other makefiles updated.
 
 2007-09-24	pwessel
 	* psxy.c:		Box-and-whisker symbols can now optionally be of the notched
